# test-devops

consumer/src/: pyproject.toml
publisher/src/: pyproject.toml
