[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["paco ocampo <paco.ocampor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2.5"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
